<resources>
    <string name="app_name">AndroidWithDesign</string>

    <string name="orderbyrate">평점순</string>
    <string name="orderbydistance">거리순</string>
    <string name="orderbyreview">리뷰순</string>

    <string name="rankandname">%d. %s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="eatdeal">EAT딜</string>
    <string name="mpick">망고픽 스토리</string>
    <string name="toplist">TOP 리스트</string>

</resources>
