<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MangoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" >

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id='@+id/tab_eatdeal'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eatdeal" />

        <com.google.android.material.tabs.TabItem
            android:id='@+id/tab_mpick'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpick" />

        <com.google.android.material.tabs.TabItem
            android:id='@+id/tab_toplist'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toplist" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/img_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/local_square"
        app:layout_constraintBottom_toTopOf="@+id/rv_eatdeal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/local_icon"
        android:layout_width="wrap_content"
        android:layout_height="11dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="21dp"
        android:src="@drawable/img_local_icon"
        app:layout_constraintBottom_toTopOf="@+id/rv_eatdeal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:text="내 주변"
        android:textColor="#5a5a5a"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_eatdeal"
        app:layout_constraintStart_toEndOf="@+id/local_icon"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:text="홍대/신촌 외 1곳"
        android:textColor="#5a5a5a"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tab_viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/img_local"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/tv_mydeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:text="MY딜"
        android:textColor="#ff7405"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tab_viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/tab_viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="1.0">

    </androidx.viewpager.widget.ViewPager>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_eatdeal"
        android:layout_width="match_parent"
        android:layout_height="626dp"
        android:layout_marginTop="48dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        tools:listitem="@layout/item_eatdeal" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="26dp"
        android:src="@drawable/an_dropdown_btn"
        app:layout_constraintBottom_toTopOf="@+id/tab_viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.454" />


</androidx.constraintlayout.widget.ConstraintLayout>